Needed one more addition to z-indexes to allow for correct pop-up rendering

--- a/frontend/src/app/edit/edit.component.scss
+++ b/frontend/src/app/edit/edit.component.scss
@@ -215,7 +215,7 @@ $page-height: 29.7cm;
     border-right: 1px solid #c7c7c7;
     box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
-    z-index: 2;
+    z-index: -10000;
 }
 
 .alignDiv {
@@ -304,7 +304,6 @@ div[contenteditable="true"]:focus {
     width: $sidebar-content-width;
     height: 157px;
     border-radius: 8px;
-
     background-color: #f0f0f0;
     margin-bottom: 20px;
 }
